# correlator-fit

./: CMakeLists.txt  Makefile  README.md
include/: correlator.h  eff_mass.h  fit_functions.h  fit_results.h  fitter.h  fitter_controls.h  gsl_pinv.h  jack_stats.h  xml_parser.h
main/: CMakeLists.txt  main.cpp
src/: correlator.cc  correlator.cpp  fitter.cc  fitter.cpp  gsl_pinv.cpp  main.cc
utility/: a0_vs_tmax.sh  avg_corrs.py  bin.py  bin_3pt.py  bk_3pt_to_2pts.py  build_parallella.sh  calc_2pion_eff_mass.py  calc_Epipi.py  calc_Rpp_eff_corr.py  calc_a0_asymptotic_luscher.py  calc_a0_asymptotic_luscher_Epipi.py  calc_bk.py  calc_bk_eff_corr.py  calc_omega_eff_mass.py  calc_phase_shift_a0_exact.py  calc_phase_shift_a0_exact_Epipi.py  calc_ps_decay.py  calc_spatial_average.py  calc_zv.py  calc_zv_eff_corr.py  flip_sign.py  fold_asym.py  fold_sym.py  kl3_3pt_to_2pts.py  omega_vs_tmin.sh  parse_omega_vs_tmin.py  plot_a0_vs_tmax.py  plot_bk_midpt_vs_sep.py  plot_correlator.py  plot_double_eff_mass.py  plot_eff_mass.py  plot_omega_vs_tmin.py  plot_zv_midpt_vs_sep.py  process_2pion.py  process_2pion_dE_ratio.py  process_2pion_ratio.py  process_ama.py  process_bk.py  process_bk_ratio.py  process_mres.py  (+6 more)
